<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kronos</string>
    <string name="button">Button</string>
    <string name="add_title">Enter the name of the task</string>
    <string name="add_desc">Enter the description</string>
    <string name="add_date">Select the date</string>
    <string name="add_time">Choose the time</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="themes">Themes:</string>
    <string name="system_theme">System theme</string>
    <string name="dark_theme">Dark</string>
    <string name="white_theme">White</string>
    <string name="other">Other:</string>
    <string name="export_db">Exporting a database</string>
    <string name="import_db">Importing a database</string>
    <string name="export_ics">Export to .ics format</string>
    <string name="import_ics">Import from .ics format</string>
    <string name="comp_export_db">Database export completed successfully</string>
    <string name="comp_import_db">Database import completed successfully</string>
    <string name="comp_export_ics">The tasks were successfully exported to iCalendar format</string>
    <string name="comp_import_ics">The tasks were successfully imported from the iCalendar format</string>
    <string name="exit">Exit</string>
    <string name="crtpass">Password creation</string>
    <string name="entpass">Password entry</string>
    <string name="crtpassdesc">Enter your password to be used in the application</string>
    <string name="entpassdesc">Enter your password that you set in the application</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="search">Search</string>
    <string name="badpass">You have entered an incorrect password</string>
    <string name="done">Done</string>
    <string name="ver">Version</string>
    <string name="github_link">https://github.com/ve3xone/kronos-todo-app</string>
    <string name="sourcecode">Source code</string>
    <string name="license">License</string>
    <string name="license_">GNU GPL-3</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="EntAllFdata">Enter All Filed data</string>
    <string name="stat">Statistics</string>
    <string name="tasks_completed">Number of tasks completed</string>
    <string name="tasks_not_completed">Number of tasks not completed</string>
    <string name="tasks">Number of tasks</string>
    <string name="tasks_efficiency">Performance (ratio of completed/uncompleted tasks)</string>
    <string name="compd">Completed</string>
    <string name="notcompd">Not Completed</string>
    <string name="taskcompoverview">Task Completion Overview</string>
</resources>