<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

    <item
            android:id="@+id/stats"
            android:icon="@drawable/ic_stat_dark"
            android:title="@string/stat"
            app:showAsAction="always">
    </item>

    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_dark"
            android:title="@string/settings"
            app:showAsAction="always">
    </item>

    <item
            android:id="@+id/about_info"
            android:icon="@drawable/ic_about_dark"
            android:title="@string/about"
            app:showAsAction="always">
    </item>

</menu>