<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vieModel" type="org.goyda.todo.ToDoListViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:context=".MainActivity"
                android:excludeFromRecents="true"
                tools:layout_editor_absoluteY="-10dp"
                tools:layout_editor_absoluteX="-8dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/editText"
                    android:hint="@string/add_title"
                    android:text="@={vieModel.title}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintHorizontal_bias="1.0" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:hint="@string/add_desc"
                    android:text="@={vieModel.desc}"
                    android:ems="10"
                    android:id="@+id/etDesc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText"
                    android:layout_marginTop="10dp" />

            <EditText
                    android:id="@+id/etdate"
                    android:inputType="none"
                    android:focusable="false"
                    android:hint="@string/add_date"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="10dp"
                    android:text="@={vieModel.date}"
                    app:layout_constraintTop_toBottomOf="@+id/etDesc"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

            <CalendarView
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/editText"
                    android:id="@+id/calendarView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" />

            <EditText
                    android:id="@+id/etTime"
                    android:hint="@string/add_time"
                    android:focusable="false"
                    android:inputType="none"
                    android:layout_width="0dp"
                    android:text="@={vieModel.time}"
                    android:layout_height="44dp"
                    app:layout_constraintStart_toEndOf="@+id/etdate"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/etDesc" />

            <Button
                    android:onClick="@{ (v) -> vieModel.click(v)}"
                    android:id="@+id/bAddAndEditList"
                    android:text="@string/add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/etdate"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="1.0" />

            <Button
                    android:text="@string/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bCancel"
                    app:layout_constraintTop_toBottomOf="@+id/bAddAndEditList"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>