<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vieModel" type="org.goyda.todo.ToDoListViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="378dp"
            android:layout_height="701dp"
            android:layout_margin="16dp"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteY="-10dp"
            tools:layout_editor_absoluteX="-8dp">

        <EditText
                android:layout_width="361dp"
                android:layout_height="44dp"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/editText"
                android:hint="@string/add_title"
                android:text="@={vieModel.title}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="1.0" />

        <CalendarView
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:id="@+id/calendarView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" />

        <Button
                android:onClick="@{ (v) -> vieModel.click(v)}"
                android:id="@+id/bAddList"
                android:text="@string/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/etdate"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="1.0" />

        <EditText
                android:id="@+id/etTime"
                android:hint="@string/add_time"
                android:focusable="false"
                android:inputType="none"
                android:layout_width="129dp"
                android:text="@={vieModel.time}"
                android:layout_height="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etdate"
                app:layout_constraintBottom_toBottomOf="@+id/etdate"
                app:layout_constraintStart_toEndOf="@+id/etdate"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintVertical_bias="0.0" />

        <EditText
                android:id="@+id/etdate"
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/add_date"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@={vieModel.date}"
                app:layout_constraintTop_toBottomOf="@+id/editDesc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTodoList"
                android:layout_width="359dp"
                android:layout_height="466dp"
                tools:listitem="@layout/item_tolist"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bAddList" />

        <EditText
                android:layout_width="362dp"
                android:layout_height="43dp"
                android:inputType="text"
                android:hint="@string/add_desc"
                android:text="@={vieModel.desc}"
                android:ems="10"
                android:id="@+id/editDesc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginTop="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>