<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="org.goyda.todo.ToDoListViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:context=".MainActivity"
                android:excludeFromRecents="true">

            <TextView
                    android:id="@+id/statlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/stat"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/pieChart" />

            <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="900px"
                    app:layout_constraintTop_toBottomOf="@+id/statlabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks"/>

            <TextView
                    android:id="@+id/label_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/pieChart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_value"
                    android:layout_marginTop="-25dp"
                    android:layout_marginStart="8dp" />
            
            <TextView
                    android:id="@+id/label_tasks_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_comp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_completed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_comp_value"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_comp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:autoLink="web"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_comp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_not_comp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_not_comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_not_completed"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_comp_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_not_comp_value"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_not_comp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_not_comp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_efficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_efficiency"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_not_comp_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/label_tasks_efficiency_value"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:id="@+id/label_tasks_efficiency_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_efficiency"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/bOk"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <Button
                    android:text="@string/ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bOk"
                    app:layout_constraintTop_toBottomOf="@+id/label_tasks_efficiency_value"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="12dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
